syntax = "proto3";

package enums.meal;

enum MealType {
  MEAL_TYPE_HOME = 0;
  MEAL_TYPE_OUTSEIDE = 1;
}