syntax = "proto3";

package meal_tag;
import "tag.proto";

message MealTag {
  repeated tag.Tag tags = 1;
}